--- a/intex.html
+++ b/intex.html
@@ -5,7 +5,7 @@
         <li>Estudante</li>
     </ul>
 </header>    <header class="cabecalho">
-    <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+    <img class="cabecalho-imagem" src="transferir.png" alt="logo da alura start">
     <ul class="cabecalho-lista">
         <li class="cabecalho-lista-item">Escola</li>
         <li class="cabecalho-lista-item">Estudante</li>
